@@ -3,7 +3,7 @@
 	--- Qt Architect generated file ---
 
 	File: CDDBSetupData.cpp
-	Last generated: Tue Apr 14 01:15:07 1998
+	Last generated: Wed Apr 15 20:39:43 1998
 
 	DO NOT EDIT!!!  This file will be automatically
 	regenerated by qtarch.  All changes will be lost.
@@ -77,6 +77,8 @@ CDDBSetupData::CDDBSetupData
 	server_listbox->setFrameStyle( 51 );
 	server_listbox->setLineWidth( 2 );
 	server_listbox->insertItem( "www.cddb.com cddbp 8880 -" );
+	server_listbox->insertItem( "wwcddb.moonsoft.com http 80 /~cddb/cddb.cgi" );
+	server_listbox->setBottomScrollBar( TRUE );
 	server_listbox->setMultiSelection( FALSE );
 
 	QLabel* dlgedit_Label_10;
