@@ -3,7 +3,7 @@
 	--- Qt Architect generated file ---
 
 	File: CDDBSetupData.h
-	Last generated: Tue Apr 14 01:15:07 1998
+	Last generated: Wed Apr 15 20:39:43 1998
 
 	DO NOT EDIT!!!  This file will be automatically
 	regenerated by qtarch.  All changes will be lost.
